Multiple Screens working, but Stage interactivity is broken! Switching from multiple Stages to DisplayObjectContainers ASAP...

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script src="js/constants.js"></script>
 <script src="js/helpers.js"></script>
 <script src="js/classes.js"></script>
+<script src="js/screens_test.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
