Initial dialogue revamp. Giants loaded from an XML file @ x=2000

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 		<script src="js/lib/pixi.min.js"></script>
 		<script src="js/constants.js"></script>
 		<script src="js/helpers.js"></script>
+		<script src="js/NPCLoader.js"></script>
 		<script src="js/classes.js"></script>
 		<script src="js/screens_test.js"></script>
+		
 		<audio loop autoplay id="MUSIC"  preload="auto">
 			<source src="assets/sfx/civil war 02 town ambient.mp3" type="audio/mp3">
 			Your browser does not support the audio element.
