Graph Game Improvements
Fixed other player, enemy now alternates moves with player
Also added map image to background
Player can now lose if he touches an enemy

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		<script src="js/classes.js"></script>
 		<script src="js/screens_test.js"></script>
 		
-		<audio loop autoplay id="MUSIC"  preload="auto">
+		<!--<audio loop autoplay id="MUSIC"  preload="auto">
 			<source src="assets/sfx/civil war 02 town ambient.mp3" type="audio/mp3">
 			Your browser does not support the audio element.
-		</audio>
+		</audio>-->
 		<script src="js/main.js"></script>
 	</body>
 </html>
