Changes for SGD ESE

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
 				display: block;
 				border: 3px solid white;
 			}
+			#game-instructions {
+				color: white;
+				text-align: center;
+			}
 		</style>
 	</head>
 	<body>
+		<div id ="game-display"></div>
+		<div id ="game-instructions">
+			Arrow keys to move <br>
+			Space to interact <br>
+			ESC to try escape game <br>
+		</div>
 		<script src="js/lib/jquery.min.js"></script>
 		<script src="js/lib/pixi.min.js"></script>
 		<script src="js/constants.js"></script>
